--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ##Propriedades de Conexao para o Oracle da FIAP
 datasource.url =jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-datasource.username =
-datasource.password =
+datasource.username =rm98214
+datasource.password =230203
 datasource.driver-class-name =oracle.jdbc.OracleDriver
 datasource.debugar = true
 datasource.pull.size = 5
